# AktenAkrobat

./: .gitignore  Cargo.toml  README.md  ai_data.json  export.csv  export.json  risk_output.json
.github/workflows/: main.yml
examples/: config.toml
mock_data/: AktenAkrobat_Test_Commands.csv  another_sample.csv  german_patients.csv  german_patients.json  patients_sample.csv  second_input.csv
src/: config.rs  export.rs  fhir.rs  import.rs  main.rs  merge.rs  risk.rs  summarize.rs  validate.rs
tests/: cli_test_failure_summary.txt  cli_tests.rs
