[package]
name = "aktenakrobat"
version = "0.2.0"
edition = "2021"
authors = ["Osborne Ndalo <osborne.ndalo@example.com>"]
description = "Medical-Grade Data Validation Toolkit (CLI + AI-Ready)"
license = "Apache-2.0"
repository = "https://github.com/OSBORNEAMOLLO/AktenAkrobat"
readme = "README.md"
homepage = "https://github.com/OSBORNEAMOLLO/AktenAkrobat"
keywords = ["healthcare", "clinical", "validation", "ehr", "hl7", "fhir"]
categories = ["command-line-utilities", "science::medical"]

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Data processing
csv = "1.2"
rayon = "1.8"
toml = "0.8"

# Medical specific
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"], optional = true }

# System/IO
tempfile = "3.8"
fs-err = "2.9"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
pretty_env_logger = { version = "0.5", optional = true }

[dev-dependencies]
# Testing
rstest = "0.18"
pretty_assertions = "1.4"
test-case = "3.2"
mockall = "0.11"

[features]
default = ["logging"]
logging = ["pretty_env_logger", "tracing-subscriber"]
medical_extras = ["tracing-subscriber", "uuid"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
